[package]
name = "scsync"
version = "0.1.0"
authors = ["main() <main@ehvag.de>", "oberien <jaro.fietz@gmx.de>"]

[dependencies]
tokio = "0.1"
tokio-io = "0.1"
bytes = "0.4"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_cbor = "0.8"
varmint = "0.1"
itertools = "0.7.8"
walkdir = "2"
tiny-keccak = "1.4"
aes-stream = "0.2"
rust-crypto = "0.2"
rand = "0.5"
diff = "0.1"
inotify = "0.5"
